--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="eu.theappshop.baseadapter.sample.MainActivity"
-    >
+<layout>
+  <data>
+    <variable
+        name="activity"
+        type="eu.theappshop.baseadapter.sample.MainActivity"
+        />
+  </data>
 
-</android.support.constraint.ConstraintLayout>
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      tools:context="eu.theappshop.baseadapter.sample.MainActivity"
+      >
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        adapter="@{activity.adapter}"
+        tools:listitem="@layout/item_test"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:elevation="100dp"
+        android:gravity="center_vertical"
+        android:padding="16dp"
+        >
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:gravity="center"
+          android:text='@{"isEmpty = " + activity.adapter.empty}'
+          tools:text="isEmpty = true"
+          />
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:gravity="center"
+          android:text='@{"size = " + activity.adapter.size}'
+          tools:text="size = 10"
+          />
+
+      <Button
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:onClick="@{() -> activity.remove()}"
+          android:text="Remove Last"
+          />
+
+    </LinearLayout>
+
+  </LinearLayout>
+
+
+</layout>
