--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
   <data>
     <variable
         name="activity"
@@ -12,13 +12,16 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
+      android:id="@+id/rootLL"
       tools:context="com.skiff2011.baseadapter.sample.MainActivity"
       >
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/itemRV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         adapter="@{activity.adapter}"
         tools:listitem="@layout/item_test"
         />
