--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,70 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
-  <data>
-    <variable
-        name="activity"
-        type="com.skiff2011.baseadapter.sample.MainActivity"
-        />
-  </data>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
+  <FrameLayout
+      android:id="@+id/rootFL"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="vertical"
-      android:id="@+id/rootLL"
-      tools:context="com.skiff2011.baseadapter.sample.MainActivity"
       >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/itemRV"
+    <fragment
+        android:id="@+id/navHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        adapter="@{activity.adapter}"
-        tools:listitem="@layout/item_test"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:elevation="100dp"
-        android:gravity="center_vertical"
-        android:padding="16dp"
-        >
-
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:gravity="center"
-          android:text='@{"isEmpty = " + activity.adapter.empty}'
-          tools:text="isEmpty = true"
-          />
-
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:gravity="center"
-          android:text='@{"size = " + activity.adapter.size}'
-          tools:text="size = 10"
-          />
-
-      <Button
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:onClick="@{() -> activity.remove()}"
-          android:text="Remove Last"
-          />
-
-    </LinearLayout>
-
-  </LinearLayout>
+  </FrameLayout>
 
 
 </layout>
