--- a/sample/src/main/res/layout/item_base_rv.xml
+++ b/sample/src/main/res/layout/item_base_rv.xml
@@ -17,7 +17,7 @@
       android:layout_height="match_parent"
       >
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomCL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -81,15 +81,15 @@
           tools:text="is empty = false"
           />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottomCL"
         adapter="@{item.adapter}"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_rv_sample"
         />
 
