--- a/sample/src/main/res/layout/fragment_tabbed.xml
+++ b/sample/src/main/res/layout/fragment_tabbed.xml
@@ -15,28 +15,28 @@
       android:layout_height="match_parent"
       >
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
-      <android.support.v7.widget.Toolbar
+      <androidx.appcompat.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:navigationIcon="@drawable/ic_arrow_back"
           >
 
-      </android.support.v7.widget.Toolbar>
+      </androidx.appcompat.widget.Toolbar>
 
-      <android.support.design.widget.TabLayout
+      <com.google.android.material.tabs.TabLayout
           android:id="@+id/tabLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           />
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <com.skiff2011.baseadapter.sample.NonSwipeableViewPager
         android:id="@+id/viewPager"
