--- a/sample/src/main/res/layout/item_base_pager.xml
+++ b/sample/src/main/res/layout/item_base_pager.xml
@@ -15,7 +15,7 @@
       android:layout_height="match_parent"
       >
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomCL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,9 +79,9 @@
           tools:text="is empty = false"
           />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
