complete initial sample

--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,7 @@
       <androidx.appcompat.widget.Toolbar
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
+          app:titleTextColor="@color/primaryTextColor"
           app:title="@string/sample"
           />
 
