--- a/sample/src/main/res/layout/item_base_rv.xml
+++ b/sample/src/main/res/layout/item_base_rv.xml
@@ -17,77 +17,90 @@
       android:layout_height="match_parent"
       >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bottomCL"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/bottomCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorDarkBgr"
-        android:padding="16dp"
+        app:cardElevation="4dp"
         >
 
-      <Button
-          android:id="@+id/removeLastBtn"
-          android:layout_width="wrap_content"
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/bottomCL"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:enabled="@{item.adapter.size > 0}"
-          android:onClick="@{item::removeLast}"
-          android:text="@string/remove_last"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          />
+          android:layout_alignParentBottom="true"
+          android:clipToPadding="false"
+          android:padding="16dp"
+          >
 
-      <Button
-          android:id="@+id/addLastBtn"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:onClick="@{item::addToTheEnd}"
-          android:text="@string/add_to_end"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          />
+        <Button
+            android:id="@+id/removeLastBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:enabled="@{item.adapter.size > 0}"
+            android:onClick="@{item::removeLast}"
+            android:text="@string/remove_last"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/addLastBtn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emptyTV"
+            />
 
-      <TextView
-          android:id="@+id/countTV"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_toEndOf="@id/removeLastBtn"
-          android:gravity="center"
-          android:text='@{@string/current_count(item.adapter.size)}'
-          app:layout_constraintBottom_toTopOf="@+id/emptyTV"
-          app:layout_constraintEnd_toStartOf="@+id/addLastBtn"
-          app:layout_constraintHorizontal_bias="0.5"
-          app:layout_constraintStart_toEndOf="@+id/removeLastBtn"
-          app:layout_constraintTop_toTopOf="parent"
-          tools:text="current size = 10"
-          />
+        <Button
+            android:id="@+id/addLastBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{item::addToTheEnd}"
+            android:text="@string/add_to_end"
+            app:layout_constraintBaseline_toBaselineOf="@id/removeLastBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/removeLastBtn"
+            app:layout_constraintTop_toBottomOf="@+id/emptyTV"
+            />
 
-      <TextView
-          android:id="@+id/emptyTV"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_below="@id/countTV"
-          android:layout_toEndOf="@id/removeLastBtn"
-          android:layout_toStartOf="@id/addLastBtn"
-          android:gravity="center"
-          android:text='@{@string/is_empty(item.adapter.empty)}'
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toStartOf="@+id/addLastBtn"
-          app:layout_constraintHorizontal_bias="0.5"
-          app:layout_constraintStart_toEndOf="@+id/removeLastBtn"
-          app:layout_constraintTop_toBottomOf="@+id/countTV"
-          tools:text="is empty = false"
-          />
+        <TextView
+            android:id="@+id/countTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/removeLastBtn"
+            android:gravity="center"
+            android:text='@{@string/current_count(item.adapter.size)}'
+            app:layout_constraintBottom_toTopOf="@+id/emptyTV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="current size = 10"
+            />
+        <TextView
+            android:id="@+id/emptyTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/countTV"
+            android:layout_marginTop="8dp"
+            android:layout_toStartOf="@id/addLastBtn"
+            android:layout_toEndOf="@id/removeLastBtn"
+            android:gravity="center"
+            android:text='@{@string/is_empty(item.adapter.empty)}'
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/countTV"
+            tools:text="is empty = false"
+            />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottomCL"
+        android:layout_above="@id/bottomCard"
         adapter="@{item.adapter}"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_rv_sample"
