--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-  <color name="colorDarkBgr">#202020</color>
+  <color name="primaryColor">#212121</color>
+  <color name="primaryDarkColor">#000000</color>
+  <color name="secondaryColor">#2962FF</color>
+  <color name="secondaryDarkColor">#0039CB</color>
+  <color name="primaryTextColor">#ffffff</color>
+  <color name="backgroundColor">#FAFAFA</color>
+  <color name="onBackgroundColor">#212121</color>
 </resources>
