--- a/sample/src/main/res/layout/item_filter_rv.xml
+++ b/sample/src/main/res/layout/item_filter_rv.xml
@@ -7,11 +7,12 @@
   <data>
     <variable
         name="item"
-        type="com.skiff2011.baseadapter.sample.BasePagerItem"
+        type="com.skiff2011.baseadapter.sample.FilterableRVItem"
         />
   </data>
 
   <RelativeLayout
+      android:id="@+id/rvRootRL"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
@@ -45,7 +46,7 @@
             app:layout_constraintEnd_toStartOf="@+id/addLastBtn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emptyTV"
+            app:layout_constraintTop_toBottomOf="@+id/filterTV"
             />
 
         <Button
@@ -59,7 +60,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/removeLastBtn"
-            app:layout_constraintTop_toBottomOf="@+id/emptyTV"
             />
 
         <TextView
@@ -75,14 +75,13 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="current size = 10"
             />
+
         <TextView
             android:id="@+id/emptyTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/countTV"
             android:layout_marginTop="8dp"
-            android:layout_toStartOf="@id/addLastBtn"
-            android:layout_toEndOf="@id/removeLastBtn"
             android:gravity="center"
             android:text='@{@string/is_empty(item.adapter.empty)}'
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,17 +90,47 @@
             tools:text="is empty = false"
             />
 
+        <TextView
+            android:id="@+id/realSizeTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/countTV"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text='@{@string/real_size(item.realCount)}'
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emptyTV"
+            tools:text="is empty = false"
+            />
+
+        <TextView
+            android:id="@+id/filterTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/countTV"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="filter: index % 2 == 0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/realSizeTV"
+            />
+
       </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pager"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         adapter="@{item.adapter}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottomCard"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_rv_sample"
         />
 
   </RelativeLayout>
+
 </layout>
