--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -47,13 +47,25 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/filterableadapter_sample"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/endlessAdapterBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/baseAdapterBtn"
-        app:layout_constraintWidth_percent="0.7"
-        />
+        app:layout_constraintWidth_percent="0.7" />
+
+    <Button
+        android:id="@+id/endlessAdapterBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/endless_adapter_sample"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filterableAdapterBtn"
+        app:layout_constraintWidth_percent="0.7" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
